[package]
name = "no_name_yet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
getopts = "0.2"
git2 = { version = "0.13", features = ["https", "vendored-libgit2"], default-features = false }
hyper = { version = "0.14", features = ["http1", "http2", "server", "runtime"] }
once_cell = "1.8"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread", "sync", "fs"] }
toml = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
